cmake_minimum_required(VERSION 3.19)
project(LinuxParalellMarathon)

set(CMAKE_CXX_STANDARD 14)

add_executable(LinuxParalellMarathon
        chap01/1.c chap01/1.2/1.c chap01/1.2/q/1-1.c chap01/1.2/q/1-2.c chap01/1.3/1.c chap01/1.3/2.c chap01/1.3/3.c chap01/1.3/4.c chap01/1.3/q/1-3.c chap01/1.3/q/1-4.c chap01/1.4/1.c chap01/1.4/2.c chap01/1.4/3.c chap01/1.4/q/1-5.c chap01/1.4/q/1-7.c)
