cmake_minimum_required(VERSION 3.19)
project(LinuxParalellMarathon)

set(CMAKE_CXX_STANDARD 14)

add_executable(LinuxParalellMarathon
        chap01/1.c chap01/1.2/1.c chap01/1.2/q/1-1.c chap01/1.2/q/1-2.c chap01/1.3/1.c chap01/1.3/2.c chap01/1.3/3.c chap01/1.3/4.c chap01/1.3/q/1-3.c chap01/1.3/q/1-4.c chap01/1.4/1.c chap01/1.4/2.c chap01/1.4/3.c chap01/1.4/q/1-5.c chap01/1.4/q/1-7.c chap02/2.1/1.c chap02/2.1/2.c chap02/2.1/3.c chap02/2.1/ex1.c chap02/2.1/ex-strtok.c chap02/2.2/shell.c chap02/2.2/q/2-3.c chap02/2.2/q/2-4.c chap03/3.1/copy1.c chap03/3.1/copy2.c chap03/3.1/copy3.c)
